feat: create api for summary
