# routes/users.js
@@ -3,6 +3,7 @@ const userController = require('../controllers/users.controller');
 
 const router = express.Router();
 
+router.get('/summary', userController.getSummary);
 router.get('/segment', userController.getSegment);
 router.get('/:id', userController.getById);
 
